(web) fix banner on mobile

--- a/web/static/css/root.scss
+++ b/web/static/css/root.scss
@@ -59,7 +59,6 @@ body {
 
 // Site-wide rendered content
 #info-banner {
-    height: 1.6em;
     background-color: #6c82cf;
     text-align: center;
     font-size: 0.9rem;
@@ -67,6 +66,7 @@ body {
 
     p {
         margin: 0;
+        padding: 2px;
     }
 
     code {
